made dosage and frequency in medication table required, created medication post route docs
